force-app/main/default/objects/Lead/fields/Account_Class__c.field-meta.xml
<CustomField>
    <fullName>Account_Class__c</fullName>
    <businessOwnerUser>kgoles@nvidia.com.trprod</businessOwnerUser>
    <description>From LeanData lead-to-account matching, field is populated from matched account record information.</description>
    <label>Account Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>