force-app/main/default/objects/Lead/fields/Account_Executive_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Email__c</fullName>
    <description>SDS-2142-EDU Lead Form Updates</description>
    <label>Account Executive Email</label>
    <type>Email</type>
</CustomField>