force-app/main/default/objects/Lead/fields/Account_Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Name__c</fullName>
    <description>SDS-2142-EDU Lead Form Updates</description>
    <label>Account Executive Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>