force-app/main/default/objects/Lead/fields/Account_Strength__c.field-meta.xml
<CustomField>
    <fullName>Account_Strength__c</fullName>
    <description>Account strength ranges between A (High) and D (Low). As per Jira #SDS-2961</description>
    <formula>CASE( X6sense_DL_AccountBuyingStage__c, &quot;Purchase&quot;, &quot;A&quot;, &quot;Decision&quot;, &quot;B&quot;, &quot;Consideration&quot;, &quot;C&quot;, &quot;Target&quot;, &quot;D&quot;, &quot;Awareness&quot;, &quot;D&quot;,&quot;Z&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account strength ranges between A (High) and D (Low)</inlineHelpText>
    <label>Account Strength</label>
    <type>Text</type>
</CustomField>