force-app/main/default/objects/Lead/fields/Acquisition_Digital_Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Digital_Sub_Channel__c</fullName>
    <businessOwnerUser>dersun@nvidia.com.trprod</businessOwnerUser>
    <description>As per Jira #SDS-2898</description>
    <label>Acquisition Digital Sub-Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>