force-app/main/default/objects/Lead/fields/Acquisition_NCID__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_NCID__c</fullName>
    <businessOwnerUser>kgoles@nvidia.com.trprod</businessOwnerUser>
    <label>Acquisition NCID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>