force-app/main/default/objects/Lead/fields/Ambassador_Type__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Type__c</fullName>
    <label>Ambassador Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Source_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Ambassador</fullName>
            </value>
            <value>
                <fullName>University Ambassador</fullName>
            </value>
            <value>
                <fullName>Industry Ambassador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>