force-app/main/default/objects/Lead/fields/Application_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Application_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>Application Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Profile - DLI, System Administrator, Sales Profile - PAM Manager, Data Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>