force-app/main/default/objects/Lead/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Ambassador &amp; SDP</fullName>
            </value>
            <value>
                <fullName>NVIDIA - Other</fullName>
            </value>
            <value>
                <fullName>NVIDIA - SA</fullName>
            </value>
            <value>
                <fullName>SDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>