force-app/main/default/objects/Lead/fields/Approved_Competencies__c.field-meta.xml
<CustomField>
    <fullName>Approved_Competencies__c</fullName>
    <label>Approved Competencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>