force-app/main/default/objects/Lead/fields/Approved_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_Program_Type__c</fullName>
    <label>Approved Program Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Solution Advisor</fullName>
            </value>
            <value>
                <fullName>Cloud Service Provider</fullName>
            </value>
            <value>
                <fullName>Service Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Solutions Integration Partner</fullName>
            </value>
            <value>
                <fullName>Federal Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Global Systems Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>