force-app/main/default/objects/Lead/fields/Approved_SubProgram_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_SubProgram_Type__c</fullName>
    <label>Approved_SubProgram_Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDU Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Data Center Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>