force-app/main/default/objects/Lead/fields/Are_you_currently_using_NVIDA_produc_del__c.field-meta.xml
<CustomField>
    <fullName>Are_you_currently_using_NVIDA_produc_del__c</fullName>
    <inlineHelpText>Please select</inlineHelpText>
    <label>Are you currently using Tesla products?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>