force-app/main/default/objects/Lead/fields/Assign_Tasks_to_Me__c.field-meta.xml
<CustomField>
    <fullName>Assign_Tasks_to_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by &apos;Automotive&apos; to assign the Tasks to the user those are owned by &apos;Marketo Sync&apos;</description>
    <label>Assign Tasks to Me</label>
    <type>Checkbox</type>
</CustomField>