force-app/main/default/objects/Lead/fields/Auto_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Status__c</fullName>
    <label>Auto Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>