force-app/main/default/objects/Lead/fields/Automotive_Segment__c.field-meta.xml
<CustomField>
    <fullName>Automotive_Segment__c</fullName>
    <label>Automotive Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aftermarket Solutions</fullName>
            </value>
            <value>
                <fullName>Autonomous Driving</fullName>
            </value>
            <value>
                <fullName>Backend Services</fullName>
            </value>
            <value>
                <fullName>In-vehicle Services</fullName>
            </value>
            <value>
                <fullName>Perception Infrastructure</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cockpit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>