force-app/main/default/objects/Lead/fields/Behavioral_Score__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Score__c</fullName>
    <label>Behavioral Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>