force-app/main/default/objects/Lead/fields/BRNSHRK__Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>BRNSHRK__Lead_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>