force-app/main/default/objects/Lead/fields/BRNSHRK__Lead_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>BRNSHRK__Lead_Full_Name__c</fullName>
    <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>