force-app/main/default/objects/Lead/fields/Challenges_why_the_client_i_interest_del__c.field-meta.xml
<CustomField>
    <fullName>Challenges_why_the_client_i_interest_del__c</fullName>
    <inlineHelpText>List which areas the customer has challenges and would like to purchase VCA to solve these challenges.</inlineHelpText>
    <label>GRID VCA Customer Challenges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAC environment</fullName>
            </value>
            <value>
                <fullName>IT admin</fullName>
            </value>
            <value>
                <fullName>HW costs</fullName>
            </value>
            <value>
                <fullName>Need Remote capability-multi locations</fullName>
            </value>
            <value>
                <fullName>Need Virtualization</fullName>
            </value>
            <value>
                <fullName>Concerned with Data Security</fullName>
            </value>
            <value>
                <fullName>Staff Augmentation-seasonal/contractors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>