force-app/main/default/objects/Lead/fields/Channel_Program_2__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program_2__c</fullName>
    <inlineHelpText>Select a Channel Program.</inlineHelpText>
    <label>Channel Program 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adobe Solution Provider</fullName>
            </value>
            <value>
                <fullName>Autodesk Solution Provider</fullName>
            </value>
            <value>
                <fullName>Cisco Solution Provider</fullName>
            </value>
            <value>
                <fullName>Citrix Solution Provider</fullName>
            </value>
            <value>
                <fullName>Dassault Systemes</fullName>
            </value>
            <value>
                <fullName>Dell Technology Partner Program</fullName>
            </value>
            <value>
                <fullName>HP Partner One Program</fullName>
            </value>
            <value>
                <fullName>IBM PartnerWorld</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>VMware Solution Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>