force-app/main/default/objects/Lead/fields/CIP_Guide_agreement_confirmation__c.field-meta.xml
<CustomField>
    <fullName>CIP_Guide_agreement_confirmation__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>CIP Guide agreement confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DLI_Instructor_Lead_YN</valueSetName>
    </valueSet>
</CustomField>