force-app/main/default/objects/Lead/fields/CIP_Workshop__c.field-meta.xml
<CustomField>
    <fullName>CIP_Workshop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-3007</description>
    <label>CIP Workshop</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Training_Service_Catalog__c.Active__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Training_Service_Catalog__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>