force-app/main/default/objects/Lead/fields/CollectedFrom__c.field-meta.xml
<CustomField>
    <fullName>CollectedFrom__c</fullName>
    <description>Marketo Field for reporting</description>
    <label>Collected From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>