force-app/main/default/objects/Lead/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <description>2016.12.2  - change label  from &quot;Have you launched or are you in stealth?&quot; to &quot;Company Status?&quot;</description>
    <label>Company Status?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Stealth</fullName>
            </value>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>