force-app/main/default/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Algorithm</fullName>
            </value>
            <value>
                <fullName>eVTOL</fullName>
                <label>Electric Vertical Takeoff &amp; Landing</label>
            </value>
            <value>
                <fullName>Engineering Service Vendor: Service Providers</fullName>
            </value>
            <value>
                <fullName>ESV</fullName>
            </value>
            <value>
                <fullName>HER</fullName>
            </value>
            <value>
                <fullName>Higher Education &amp; Research: Research Labs</fullName>
            </value>
            <value>
                <fullName>Higher Education &amp; Research: University</fullName>
            </value>
            <value>
                <fullName>IHV</fullName>
            </value>
            <value>
                <fullName>Independent Hardware Vendor: Hardware</fullName>
            </value>
            <value>
                <fullName>Independent Hardware Vendor: Sensors</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor: AV Algorithm</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor: Software &amp; Simulation</fullName>
            </value>
            <value>
                <fullName>Independent Software Vendor: Trucking</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>OEM: Commercial Vehicles</fullName>
            </value>
            <value>
                <fullName>OEM: Passenger Cars</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>R &amp; D Labs</fullName>
            </value>
            <value>
                <fullName>Robo-taxi</fullName>
            </value>
            <value>
                <fullName>Sensors</fullName>
            </value>
            <value>
                <fullName>TAAS</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Truck / Bus / Shuttle</fullName>
            </value>
            <value>
                <fullName>Trucking</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>