force-app/main/default/objects/Lead/fields/Competencies_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Competencies_Interested_In__c</fullName>
    <label>Competencies Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>