force-app/main/default/objects/Lead/fields/Competency_to_apply_for_Preferred_Status__c.field-meta.xml
<CustomField>
    <fullName>Competency_to_apply_for_Preferred_Status__c</fullName>
    <inlineHelpText>What competency would you like to apply for Preferred Status?</inlineHelpText>
    <label>Competency to apply for Preferred Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Compute DGX</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>