force-app/main/default/objects/Lead/fields/Consulting__c.field-meta.xml
<CustomField>
    <fullName>Consulting__c</fullName>
    <inlineHelpText>Enter the % of Consulting as it applies</inlineHelpText>
    <label>Consulting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>