force-app/main/default/objects/Lead/fields/Cost_Savings__c.field-meta.xml
<CustomField>
    <fullName>Cost_Savings__c</fullName>
    <description>TCO Calculator Questions</description>
    <label>Cost Savings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>