force-app/main/default/objects/Lead/fields/Country2__c.field-meta.xml
<CustomField>
    <fullName>Country2__c</fullName>
    <label>Country2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>